# arraybridge

./: ADDING_NEW_FRAMEWORKS.md  CI_ARTIFACT_UPDATE.md  CI_CUPY_FIX.md  CI_IMPROVEMENTS.md  CONTRIBUTING.md  COVERAGE_AUDIT_PLAN.md  DEPLOYMENT_SUMMARY.md  GPU_TESTING_SETUP.md  MIGRATION_SUMMARY.md  README.md  SETUP_INSTRUCTIONS.md  TESTING.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  coverage-pages.yml  gpu-tests.yml  publish.yml
docs/: ci-cd.md
docs/sphinx/: README.md  ci-cd.rst  conf.py  contributing.rst  index.rst  quickstart.rst
docs/sphinx/api/: converters.rst  decorators.rst  exceptions.rst  index.rst  types.rst  utils.rst
docs/sphinx/examples/: basic_conversion.rst  decorators.rst  index.rst  multi_framework.rst
plans/: plan_01_readthedocs_setup.md
src/arraybridge/: __init__.py  conversion_helpers.py  converters.py  converters_registry.py  decorators.py  dtype_scaling.py  exceptions.py  framework_config.py  framework_ops.py  gpu_cleanup.py  oom_recovery.py  slice_processing.py  stack_utils.py  types.py  utils.py
tests/: __init__.py  conftest.py  test_converters.py  test_converters_registry.py  test_decorators.py  test_dtype_scaling.py  test_exceptions.py  test_framework_config.py  test_gpu_cleanup.py  test_integration.py  test_oom_recovery.py  test_registry_integration.py  test_slice_processing.py  test_stack_utils.py  test_types.py  test_utils.py
